inserito media-query per  rendere il sito responsive

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pane Buono</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <link rel="stylesheet" media="screen and ( max-width: 500px)" href="css/mobile.css">
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and ( max-width: 500px)" href="css/mobile.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 </head>
@@ -31,10 +32,12 @@
     <!--Section 1-->
     <section id="showcase">
         <div class="container">
-            <h1><span class="color-primary">Odora</span> la natura</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="btn" href="about.html">il nostro panificio</a>
+            <div class="section-text1">
+                <h1><span class="color-primary">Odora</span> la natura</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p><br>
+                <a class="btn" href="about.html">il nostro panificio</a>
+            </div>
         </div>
     </section>
     <!--Section 2-->
@@ -48,7 +51,7 @@
                 <br><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                     aute irure dolor in reprehenderit in voluptate velit esse cillum dolore </p>
-                <a class="btn-ligth" href="">leggi di più</a>
+                <a class="btn-ligth" href="about.html">leggi di più</a>
 
             </div>
 
